# stdstreams

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  makefile
.github/workflows/: cmake.yml  makefile.yml
inc/: child.hpp  config.hpp  display.hpp  ftxui.hpp  output.hpp  stdstreams.hpp
lib/: ftxui  std-k  std-k.hpp
lib/std-k/: std-k.cpp
src/: child.cpp  display.cpp  ftxui.cpp  makefile  output.cpp  stdstreams.cpp
src/stdstreampilot/: ftxui.cpp  main  makefile
tests/: stdout.sh
